--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -31,8 +31,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul, a {
-	list-style: none;
+ol, ul, a ,li{
+all: unset;
+  list-style: none;
   text-decoration: none;
   color: #000000;
 }
